# periodiq

./: .gitlab-ci.yml  periodiq.py  pyproject.toml
.github/workflows/: ci.yml
tests/unit/: pytest.ini
