[tool.poetry]
name = "periodiq"
version = "0.13.0"
description = "Simple Scheduler for Dramatiq Task Queue"
authors = ["Étienne BERSAC"]
license = "LGPL-3.0+"
readme = "README.md"
include = ["COPYING", "COPYING.LESSER"]

[tool.poetry.dependencies]
python = "^3.10"
dramatiq = ">=1.18,<3.0"
pendulum = ">=2.0, <4"

[tool.poetry.dev-dependencies]
pytest = "^7.0"
flake8 = "^5.0"
pytest-mock = "^3.6"

[tool.poetry.scripts]
periodiq = 'periodiq:entrypoint'

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
